--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -84,6 +84,9 @@ $desktop-max-height: 1280px !default;
 .navbar-nav > .user-menu .user-image {
   display: inline;
 }
+.login-logo  img {
+  display: inline;
+}
 
 .box-chart {
   position: relative;
